@@ -3,10 +3,11 @@ plugins {
     id 'checkstyle'
     id "org.sonarqube" version "2.8"
     id "org.owasp.dependencycheck" version "5.2.4"
+    id 'maven-publish'
 }
 
 group 'com.docutools'
-version '1.1'
+version '1.0.0'
 
 sourceCompatibility = 14
 targetCompatibility = 14
@@ -65,4 +66,36 @@ compileTestJava {
 test {
     jvmArgs '--enable-preview'
     useJUnitPlatform()
+}
+
+task automatedTests(type: Test) {
+    jvmArgs '--enable-preview'
+    useJUnitPlatform()
+    include '**/*Test.class'
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = 'jocument'
+            from components.java
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            url "s3://docu-tools-maven/${project.version.endsWith('-SNAPSHOT') ? 'snapshot' : 'release'}"
+            credentials(AwsCredentials) {
+                accessKey project.hasProperty('AWS_ACCESS_KEY') ? AWS_ACCESS_KEY : "${System.env.AWS_ACCESS_KEY}"
+                secretKey project.hasProperty('AWS_SECRET_KEY') ? AWS_SECRET_KEY : "${System.env.AWS_SECRET_KEY}"
+            }
+        }
+    }
 }
